=== r12 ===

 * alignment with TinyMeleeStats
 * add Color options
 * add Record Sound
 * add Hit Stat

=== r11 ===

* removed Armor Penetration and add Focus Regen
* Frame Initialize fixed (before, many Initialize)
* SetScript "OnDrag" when loaded addon
 
* LDB 
  ** add OnClick Handler to open Options
   
* Options
  ** add option to display / hide stats in the LDB text field. 