@@ -1,3 +1,8 @@
+=== r14 ===
+
+ * Broker Color = Text Color
+ * Reords specific for Spec 
+
 === r12 ===
 
  * alignment with TinyMeleeStats
